# smol_isa

./: Cargo.toml
smol_asm/: Cargo.toml
smol_asm/src/: ast.rs  compiler.rs  main.rs
smol_file/: Cargo.toml
smol_file/src/: lib.rs
smol_isa/: Cargo.toml
smol_isa/src/: lib.rs
smol_vm/: Cargo.toml
smol_vm/src/: lib.rs  main.rs  registers.rs
smol_vm/src/syscall/: mod.rs  unix.rs  x86_64_linux.rs
smol_vm/tests/vm/: alu_eq_test.rs  mod.rs  stack_test.rs
src/: lib.rs  main.rs
tests/vm/: add_test.rs  alu_eq_test.rs  mod.rs
