[workspace]

members = [
    "smol_isa",
    "smol_asm",
    "smol_file",
    "smol_vm",
]


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
smol-isa = { path ="./smol_isa" }
smol-asm = { path ="./smol_asm" }
smol-file = { path ="./smol_file" }
smol-vm = { path ="./smol_vm" }

libc = "0.2"
